# velloc-bootstrap

./: .gclient  .gitignore  LICENSE  README.md  bootstrap.bat  bootstrap.sh  browser-lab.code-workspace  build.bat  build.sh  release_manifest.json
args/: Debug.gn  Release.gn  Velloc.gn
scripts/: bootstrap_cli.py  build_nexus_bridge.sh  custom_browser_tag.py  run_nexus_tests.sh  run_nexus_webui_tests.sh
